# Pure2D-SFML

./: .gitignore  CMakeLists.txt  PureEngine.sln  README.md
PureEngine/: CMakeLists.txt  Constants.h  Context.h  Conversions.cpp  Conversions.h  CreateVertSquare.cpp  CreateVertSquare.h  DebugLog.h  Entity.cpp  Entity.h  FlattenStrings.cpp  FlattenStrings.h  Game.cpp  Game.h  GetConsoleInput.cpp  GetConsoleInput.h  ParallelFor.h  Player.cpp  Player.h  Printable.h  PureEngine.h  PureEngine.vcxproj  PureEngine.vcxproj.filters  Random.cpp  Random.h  ResourceHolder.h  ResourceManager.h  SceneNode.cpp  SceneNode.h  SplitString.cpp  SplitString.h  State.cpp  State.h  StateManager.cpp  StateManager.h  StringToCase.cpp  StringToCase.h  Tilemap.cpp  Tilemap.h  ToString.cpp  (+10 more)
